<resources>
    <string name="app_name">MyGolf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">MyGolfMobileApp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">My Profile</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_course">Course</string>
    <string name="menu_course_edit">Edit Course</string>
    <string name="menu_course_delete">Delete Course</string>

    <string name="menu_booking">Bookings</string>
    <string name="fragment_course">Course Details</string>
    <string name="menu_score">Score Card</string>

    //login input fields
    <string name="emailAddress">Email</string>
    <string name="password">Password</string>

    //Registration
    <string name="firstName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registration">Registration</string>

    <string name="content_description_end_icon">Password Key Icon</string>
    <string name="content_description_email_icon">At sign Icon</string>

    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="title">MyGolf</string>
    <string name="companyLogo">Company Logo</string>
    <string name="registerButton">Register New</string>

    <string name="infoDisplay">This application is in beta testing, no data is saved outside of your device. Registration is required to allow multiple accounts to be used on a single device. if this changes, you will be notified.</string>
    <string name="profiledisclaimer">This application is in beta testing, no data is saved outside of your device.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //add course fragment
    <string name="menu_course_add">Add Course</string>
    <string name="course_add_name">Course Name</string>
    <string name="course_add_location">Course Location</string>
    <string name="course_add_number">Course Phone Number</string>
    <string name="course_hole_title">Course Hole Details</string>


    //delete course fragment
    <string name="course_delete_title">Delete Record</string>
    <string name="course_delete_spinner_hint">Select Course</string>
    <string name="course_delete_buttonText">Delete</string>


    <string name="booking_select_date">Select Booked Date</string>
    <string name="booking_select_course">Select Course</string>

    <string name="playerSelect">Total Players</string>
    <string name="playerName">Player Name</string>


    <string name="name_1">playerOne</string>
    <string name="name_2">playerTwo</string>
    <string name="name_3">playerThree</string>
    <string name="name_4">playerFour</string>
    <string name="name_5">playerFive</string>
    <string name="name_6">playerSix</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="reset_app">Reset App</string>
    <string name="general">General</string>
    <string name="stableford">Stableford</string>
    <string name="match_play">Match Play</string>
    <string name="stroke_play">Stroke Play</string>
    <string name="handicap">Handicap</string>
    <string name="scoring">Scoring</string>
    <string name="dark_mode">Dark mode</string>
    <string name="visual_options">Visual Options</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>


</resources>