<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/scorecard"
            android:title="@string/menu_score" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/courseadd"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/booking"
            android:title="@string/menu_booking" />
    </group>
</menu>