<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.softwarepro.mygolf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.softwarepro.mygolf.ui.course.CourseFragment"
        android:label="@string/fragment_course"
        tools:layout="@layout/fragment_course" >
        <action
            android:id="@+id/action_nav_course_to_courseAddFragment"
            app:destination="@id/nav_courseAddFragment" />
        <action
            android:id="@+id/action_nav_course_to_courseDeleteFragment"
            app:destination="@id/nav_courseDeleteFragment" />
        <action
            android:id="@+id/action_nav_course_to_courseEditFragment"
            app:destination="@id/nav_courseEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_booking"
        android:name="com.softwarepro.mygolf.ui.booking.BookingFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_booking" />
    <fragment
        android:id="@+id/nav_score"
        android:name="com.softwarepro.mygolf.ui.score.ScoreFragment"
        android:label="@string/menu_score"
        tools:layout="@layout/fragment_score" />
    <fragment
        android:id="@+id/nav_courseAddFragment"
        android:name="com.softwarepro.mygolf.CourseAddFragment"
        android:label="@string/menu_course_add"
        tools:layout="@layout/fragment_course_add" >
        <action
            android:id="@+id/action_courseAddFragment_to_nav_course"
            app:destination="@id/nav_course" />
    </fragment>
    <fragment
        android:id="@+id/nav_courseDeleteFragment"
        android:name="com.softwarepro.mygolf.CourseDeleteFragment"
        android:label="@string/menu_course_delete"
        tools:layout="@layout/fragment_course_delete" >
        <action
            android:id="@+id/action_courseDeleteFragment_to_nav_course"
            app:destination="@id/nav_course" />
    </fragment>
    <fragment
        android:id="@+id/nav_courseEditFragment"
        android:name="com.softwarepro.mygolf.CourseEditFragment"
        android:label="@string/menu_course_edit"
        tools:layout="@layout/fragment_course_edit" >
        <action
            android:id="@+id/action_courseEditFragment_to_nav_course"
            app:destination="@id/nav_course" />
    </fragment>
</navigation>