<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEBC9E"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:id="@+id/companyLogo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/companyLogo"
        android:src="@drawable/logowithname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/visualLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/visual_options"
        android:textColor="#5C5C5C"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLogo" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkModeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/darkModeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/darkModeLabel" />

    <TextView
        android:id="@+id/darkModeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dark_mode"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/visualLabel"
        app:layout_constraintTop_toBottomOf="@+id/visualLabel" />

    <TextView
        android:id="@+id/scoringLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/scoring"
        android:textColor="#5C5C5C"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/darkModeLabel"
        app:layout_constraintTop_toBottomOf="@+id/darkModeLabel" />

    <TextView
        android:id="@+id/currentHandicap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#5C5C5C"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/darkModeLabel"
        app:layout_constraintTop_toBottomOf="@+id/handicapLabel" />

    <TextView
        android:id="@+id/currentScoringMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#5C5C5C"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/darkModeLabel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/handicapLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/handicap"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/visualLabel"
        app:layout_constraintTop_toBottomOf="@+id/scoringLabel" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handicapInput" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/handicapInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:hint="@string/handicap"
        app:layout_constraintBottom_toBottomOf="@+id/handicapLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/handicapLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintStart_toStartOf="@+id/handicapLabel"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stroke_play"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/match_play"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stableford"
            android:textSize="24sp" />

    </RadioGroup>


    <TextView
        android:id="@+id/generalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/general"
        android:textColor="#5C5C5C"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/visualLabel"
        app:layout_constraintTop_toBottomOf="@+id/currentScoringMethod" />

    <TextView
        android:id="@+id/resetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset_app"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/visualLabel"
        app:layout_constraintTop_toBottomOf="@+id/generalLabel" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/resetLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resetLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>